--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -5,24 +5,69 @@
 
 <div class="page-width{% if cart == empty %} is-empty{% endif %}" id="main-cart-footer" data-id="{{ section.id }}">
   <div>
-    <div class="cart__footer">
+    <div id="cart-errors"></div>
+    <div class="cart__footer yc-cols">
       {%- if section.settings.show_cart_note -%}
         <cart-note class="cart__note field">
           <label for="Cart-note">{{ 'sections.cart.note' | t }}</label>
           <textarea class="text-area field__input" name="note" form="cart" id="Cart-note" placeholder="{{ 'sections.cart.note' | t }}">{{ cart.note }}</textarea>
         </cart-note>
       {%- endif -%}
-
-      <div class="cart__blocks">
-        {% for block in section.blocks %}
+     
+        <div class="yc-col">
+          <div class="yc-col-head yc-acc">Pay Over Time</div>
+          <div class="ycf-box hideMe">
+            <div class="yc-financing">
+              <img src="{{ 'splitit.svg' | asset_url }}" width="85" alt="SplitIt" loading="lazy" />
+              <span data-ml="splitItSummary"><p>Monthly payments using your credit card. 0% interest.</p></span>
+              <a href="javascript:void(0)" class="yc-col-learnMore" onclick="potMore('splitit')">Learn More</a>
+                
+              <img src="{{ 'bread.png' | asset_url }}" width="85" alt="Bread Financing" style="margin-top: 40px;" loading="lazy" />
+              <span data-ml="breadSummary"><p>Simple loan with monthly payments as low as 0% APR for 6 months.*</p></span>
+              <a href="javascript:void(0)" class="yc-col-learnMore" onclick="potMore('bread')">Learn More</a>
+            </div>
+          </div>
+          <div class="pot-col-100 hideMe" id="splititCol">
+            <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy"/ ></a>
+            <img src="{{ 'splitit.svg' | asset_url }}" width="85" alt="SplitIt" loading="lazy" />
+            <span data-ml="splitItText"><ul><li>0% interest</li><li>Monthly payments on your existing credit card</li><li>Keep earning rewards from your credit card</li><li>No credit check needed to qualify</li><li>Choose from 2-12 month payment plans.</li></ul></span>
+            <p class="fineprint">You can choose this option at checkout.</p>
+          </div>
+          <div class="pot-col-100 hideMe" id="breadCol">
+            <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy" /></a>
+            <img src="{{ 'bread.png' | asset_url }}" width="85" alt="Bread Financing" loading="lazy" />
+              <span data-ml="breadText"><ul><li>Starting at 0% APR for 6 months*</li><li>Traditional installment loan</li><li>Check your rate without affecting your credit score</li></ul><p>*Subject to approval of credit application. Rates range from 0% to 29.99% APR, resulting in, for example, 24 monthly payments of $46.14 at 9.99% APR, per $1,000 borrowed. APRs will vary depending on credit qualifications, loan amount, and term. Bread<sup>®</sup>&nbsp;pay-over-time plans are loans made by Comenity Capital Bank.</p></span>
+              <p class="fineprint">Check your eligibility in minutes at checkout.</p>
+          </div>
+        </div>
+        <div class="yc-col">
+          <div class="yc-col-head yc-acc">Shipping</div>
+          <div class="yc-shipping hideMe">
+            <cms id="cms1">
+  
+  
+  
+  <p>All U.S. orders are sent via FedEx. International orders may be sent via FedEx or DHL Express.</p>
+  <p>SaunaSpace offers free shipping for all orders over $200 in Canada and the contiguous United States. Estimates for all other orders are available in checkout after providing your shipping destination.</p>
+  </cms>
+            <!-- <p class="debug">Weight: <span class="cartWeight">7</span> lbs</p> -->
+          </div>
+        </div>
+        <div class="yc-col yc-col-checkout">
+          <div class="yc-col-head">Your Order <span class="ycc-items">{{ cart.item_count }} item(s)</span></div>
+          <!--
+          <div class="ycc-lineitem"><strong>Subtotal</strong><span class="etica cartTotal">$349.99</span></div>
+          <div class="ycc-lineitem"><strong>Shipping & Tax</strong><span class="fineprint">Calculated at checkout</span></div>
+          -->
+          
+          {% for block in section.blocks %}
           {%- case block.type -%}
-            {%- when '@app' -%}
-              {% render block %}
-            {%- when 'subtotal' -%}
-              <div class="js-contents" {{ block.shopify_attributes }}>
-                <div class="totals">
-                  <h3 class="totals__subtotal">{{ 'sections.cart.subtotal' | t }}</h3>
-                  <p class="totals__subtotal-value">{{ cart.total_price | money_with_currency }}</p>
+          {%- when '@app' -%}
+          {% render block %}
+          {%- when 'subtotal' -%}
+          <div class="js-contents" {{ block.shopify_attributes }}>
+            <div class="totals">
+                  <div class="ycc-lineitem"><strong>Estimated Total</strong><span class="etica-bold cartTotal totals__subtotal-value">{{ cart.total_price | money_with_currency }}</span><div class="fineprint">Shipping and tax are calculated at checkout.</div></div>
                 </div>
 
                 <div>
@@ -59,21 +104,20 @@
                   </button>
                 </noscript>
 
-                <button type="submit" id="checkout" class="cart__checkout-button button" name="checkout"{% if cart == empty %} disabled{% endif %} form="cart">
+                <button type="submit" id="checkout" class="cart__checkout-button button btn btn-checkout" name="checkout"{% if cart == empty %} disabled{% endif %} form="cart">
                   {{ 'sections.cart.checkout' | t }}
                 </button>
               </div>
 
-              {%- if additional_checkout_buttons -%}
-                <div class="cart__dynamic-checkout-buttons additional-checkout-buttons">
-                  {{ content_for_additional_checkout_buttons }}
-                </div>
-              {%- endif -%}
           {%- endcase -%}
         {% endfor %}
+        </div>
+   
+      
+        
 
-        <div id="cart-errors"></div>
-      </div>
+       
+   
     </div>
   </div>
 </div>
@@ -94,6 +138,22 @@
 {% endjavascript %}
 
 <script>
+
+function potMore(f) {
+	$(".yc-financing").addClass("hideMe");
+	$("#" + f + "Col").removeClass("hideMe");
+}
+
+$(".pot-col-100").on("click",function() {
+	$(this).addClass("hideMe");
+	$(".yc-financing").removeClass("hideMe");
+});
+
+$(".yc-col-head.yc-acc").on("click",function() {
+	$(this).toggleClass("yc-acc-minus");
+	$(this).next().toggleClass("hideMe");
+});
+
   document.addEventListener('DOMContentLoaded', function() {
     function isIE() {
       const ua = window.navigator.userAgent;
