--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -128,16 +128,7 @@ and (min-width: 750px) { .section-header { margin-bottom:
 <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'cart-notification.js' | asset_url }}" defer="defer"></script>
 
-<!-- Google Tag Manager (noscript) -->
-<noscript
-  ><iframe
-    src="https://www.googletagmanager.com/ns.html?id=GTM-W5T77Q7"
-    height="0"
-    width="0"
-    style="display: none; visibility: hidden"
-  ></iframe
-></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 <div class="overlay hideMe"></div>
 <div class="util-nav">
   <a href="/" class="logo nav-mobile"></a>
@@ -518,7 +509,7 @@ this.currentScrollTop && scrollTop > this.headerBounds.bottom) { if
 (this.preventHide) return; requestAnimationFrame(this.hide.bind(this)); } else
 if (scrollTop < this.currentScrollTop && scrollTop > this.headerBounds.bottom) {
 if (!this.preventReveal) { requestAnimationFrame(this.reveal.bind(this)); } else
-{ window.clearTimeout(this.isScrolling); this.isScrolling = setTimeout(() => {
+{ window.clearTimeopcut(this.isScrolling); this.isScrolling = setTimeout(() => {
 this.preventReveal = false; }, 66); requestAnimationFrame(this.hide.bind(this));
 } } else if (scrollTop <= this.headerBounds.top) {
 requestAnimationFrame(this.reset.bind(this)); } this.currentScrollTop =
