--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,10 +1,7 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html class="no-js" lang="{{ request.locale.iso_code }}">
   <head>
-    <link
-      rel="stylesheet"
-      href="https://obscure-escarpment-2240.herokuapp.com/stylesheets/bcpo-front.css"
-    />
+    <link    rel="stylesheet"   href="https://obscure-escarpment-2240.herokuapp.com/stylesheets/bcpo-front.css" />
     <script>
       var bcpo_product={{ product | json }}; {% if product.metafields.bcpo.bcpo_data %}var bcpo_data={{ product.metafields.bcpo.bcpo_data }};{% endif %} {% if shop.metafields.bcpo.bcpo_settings %}var bcpo_settings={{ shop.metafields.bcpo.bcpo_settings }};{% endif %}var inventory_quantity = [];{% for v in product.variants %}inventory_quantity.push({{v.inventory_quantity}});{% endfor %}if(bcpo_product) { for (var i = 0; i < bcpo_product.variants.length; i += 1) { bcpo_product.variants[i].inventory_quantity = inventory_quantity[i]; }}window.bcpo = window.bcpo || {}; bcpo.cart = {{cart | json}}; bcpo.ogFormData = FormData;
     </script>
@@ -544,18 +541,14 @@ l<!DOCTYPE html>
   </head>
 
   <body class="gradient">
-    <a class="skip-to-content-link button visually-hidden" href="#MainContent">
+     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ "accessibility.skip_to_text" | t }}
-    </a>
-
-    {% comment %} {% section 'announcement-bar' %} {% endcomment %} {% section
-    'header' %}
-    <main
-      id="MainContent"
-      class="content-for-layout focus-none"
-      role="main"
-      tabindex="-1"
-    >
+    </a> 
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe  src="https://www.googletagmanager.com/ns.html?id=GTM-W5T77Q7"  height="0" width="0"  style="display: none; visibility: hidden" ></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+ {% section 'header' %}
+    <main id="MainContent"  class="content-for-layout focus-none"  role="main"  tabindex="-1" >
       {{ content_for_layout }}
     </main>
 
