--- a/assets/base.css
+++ b/assets/base.css
@@ -1242,8 +1242,7 @@ button.shopify-payment-button__button--unbranded {
   left: var(--buttons-border-width);
   z-index: 1;
   border-radius: var(--buttons-radius);
-  box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset)) rgba(var(--color-button-text), var(--border-opacity)),
-    0 0 0 var(--buttons-border-width) rgba(var(--color-button), var(--alpha-button-background));
+  box-shadow: none;
   transition: box-shadow var(--duration-short) ease;
 }
 
@@ -1252,8 +1251,7 @@ button.shopify-payment-button__button--unbranded {
 .customer button:hover::after,
 .shopify-payment-button__button--unbranded:hover::after {
   --border-offset: 1.3px;
-  box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset)) rgba(var(--color-button-text), var(--border-opacity)),
-    0 0 0 calc(var(--buttons-border-width) + 1px) rgba(var(--color-button), var(--alpha-button-background));
+  box-shadow: none;
 }
 
 .button--secondary:after {
@@ -2900,7 +2898,7 @@ section:not(.shopify-section) {
 	transition: top .25s;
 }
 
-.stuck .logo { background-image: url( 'logo_symbol.svg'); top: 8px; }
+.stuck .logo, .sticky .logo { background-image: url( 'logo_symbol.svg'); top: 8px; }
 .stuck + .nav-on-top { top: 66px; }
 
 
@@ -4104,9 +4102,16 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 		justify-content: flex-end;
 		align-items: center;
 	}
+	.sticky-add-to-cart .price-item.price-item--sale.price-item--last, .sticky-add-to-cart  .price-item.price-item--regular.pt-price.etica, .sticky-add-to-cart  .product__info-container .price--on-sale .price-item--regular, .sticky-add-to-cart .price--on-sale .price-item--regular {
+		font-size: 18px !important;
+	}
 	
 	.stickyBG-visible { transform: translateY(-160px); transition: transform .25s; 
 		top: 225px;
+	}
+
+	span.bcpo-value {
+		display: none;
 	}
 
 .sac-product {
@@ -5965,8 +5970,13 @@ span[data-ml]::before {
  }
 
 #bcpo {
-	display: flex;
-	flex-wrap: wrap;
+	display: inline-block;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#bcpo .bcpo-title {
+	font-weight: normal;
 }
 #bcpo .bcpo-dropdown {
 	order: 2;
@@ -5988,7 +5998,7 @@ span[data-ml]::before {
 }
 #bcpo .bcpo-images {
 	text-align: center;
-	margin: 0 auto;
+	margin: 10px auto 0;
 }
 #bcpo .bcpo-images .bcpo-label {
 	font-size: 1.4rem;
