--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1,5 +1,87 @@
+.product-form__input.product-form__input--dropdown select.select__select {
+    display: block;
+    width: 100%;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: #444;
+    line-height: 1.3;
+    padding: 0.6em 1.8em 0.5em 0.8em;
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgb(0 0 0 / 4%);
+    border-radius: 2px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23222222%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E);
+    background-repeat: no-repeat;
+    background-position: right 0.7em top 50%;
+    background-size: 0.65em auto;
+}
+.product-form__input.product-form__input--dropdown div.select svg.icon.icon-caret {
+    display: none;
+}
+.product-form__input.product-form__input--dropdown {
+    margin: 0px !important;
+    max-width: 100%;
+}
 button.product-form__submit:before, button.product-form__submit:after {
     display: none;
+}
+.product-form__input.product-form__input--dropdown div.select {
+    width: 100% !important;
+    max-width: 100% !important;
+}
+.size-chart table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    border: none !important;
+    box-shadow: unset !important;
+  table-layout: auto !important;
+}
+.sc-head {
+    font-weight: 700;
+    text-align: left;
+    margin: 1.5em 0 0.25em 0;
+}
+.size-chart table {
+    width: 100%;
+}
+.size-div.product__accordion.accordion {
+    border: none;
+}
+table:not([class]) td, table:not([class]) th {
+    border-left: none;
+    border-right: none;
+}
+table:not([class]) th{
+  
+    border: none;
+}
+.size-div.product__accordion.accordion {
+    border: none;
+    margin: 0px !important;
+    padding: 0px !important;
+}
+.size-div summary {
+    padding: 0px !important;
+}
+.size-div h2.h4.accordion__title {
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    text-transform: unset;
+    margin: 0 auto;
+  text-decoration: underline;
+}
+.size-chart td {
+    text-align: left;
+    font-size: 1.4rem;
+    border-bottom: 1px solid #939393;
+    padding: 10px;
 }
 #bcpo .bcpo-images input:checked + label, #bcpo .bcpo-colors input:checked + label {
     box-shadow: 0 0 0 1px black;
@@ -1105,6 +1187,25 @@ a.product__text {
   border-radius: 0;
 }
 
+.thumbnail[aria-current] {
+  box-shadow: 0 0 0rem 0.1rem rgb(var(--color-foreground));
+  border-color: rgb(var(--color-foreground));
+}
+
+.thumbnail[aria-current]:focus-visible {
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0rem 0.5rem rgba(var(--color-foreground), 0.5);
+}
+
+.thumbnail[aria-current]:focus,
+.thumbnail.focused {
+  outline: 0;
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0rem 0.5rem rgba(var(--color-foreground), 0.5);
+}
+
+.thumbnail[aria-current]:focus:not(:focus-visible) {
+  outline: 0;
+  box-shadow: 0 0 0 0.1rem rgb(var(--color-foreground));
+}
 
 .thumbnail img {
   pointer-events: none;
