--- a/assets/base.css
+++ b/assets/base.css
@@ -191,7 +191,7 @@
 /* base */
 
 .thumbnail[aria-current] {
-	border: 2px solid #C57A29 !important;
+	border: 1px solid #C57A29 !important;
 }
 
 .no-js:not(html) {
@@ -424,7 +424,9 @@ blockquote {
   line-height: calc(1 + 0.5 / var(--font-body-scale));
   letter-spacing: 0.04rem;
 }
-
+  .product-form__input.product-form__input--dropdown label.form__label{
+  font-size: 1.6rem;
+  }
 .color-foreground {
   color: rgb(var(--color-foreground));
 }
@@ -1242,7 +1244,8 @@ button.shopify-payment-button__button--unbranded {
   left: var(--buttons-border-width);
   z-index: 1;
   border-radius: var(--buttons-radius);
-  box-shadow: none;
+  box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset)) rgba(var(--color-button-text), var(--border-opacity)),
+    0 0 0 var(--buttons-border-width) rgba(var(--color-button), var(--alpha-button-background));
   transition: box-shadow var(--duration-short) ease;
 }
 
@@ -1251,7 +1254,8 @@ button.shopify-payment-button__button--unbranded {
 .customer button:hover::after,
 .shopify-payment-button__button--unbranded:hover::after {
   --border-offset: 1.3px;
-  box-shadow: none;
+  box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset)) rgba(var(--color-button-text), var(--border-opacity)),
+    0 0 0 calc(var(--buttons-border-width) + 1px) rgba(var(--color-button), var(--alpha-button-background));
 }
 
 .button--secondary:after {
@@ -2243,6 +2247,13 @@ input[type='checkbox'] {
 .header__icon span {
   height: 100%;
 }
+  .cart-count-bubble > span {
+    margin-top: 0px;
+    line-height: 25px;
+}
+  span.cart-price {
+    padding-left: 4px;
+}
 
 .header__icon::after {
   content: none;
@@ -2252,7 +2263,21 @@ input[type='checkbox'] {
 .modal__close-button:hover .icon {
   transform: scale(1.07);
 }
+   
+  a#cart-icon-bubble {
+    
+    border-bottom: 1px solid transparent !important;
+}
 
+
+a#cart-icon-bubble:hover {
+    border-bottom: 1px solid #000 !important;
+}
+ 
+  .cart-count-bubble > span {
+    margin-top: 0px;
+    line-height: 25px;
+}
 .header__icon .icon {
   height: 2rem;
   width: 2rem;
@@ -2263,9 +2288,11 @@ input[type='checkbox'] {
 .header__icon,
 .header__icon--cart .icon {
   height: auto;
-  width: 12rem;
+  width: 17rem;
 }
-
+.cart-count-bubble > span {
+    font-size: 1.6rem;
+}
 .header__icon--cart {
   position: relative;
   margin-right: -1.2rem;
@@ -2898,7 +2925,7 @@ section:not(.shopify-section) {
 	transition: top .25s;
 }
 
-.stuck .logo, .sticky .logo { background-image: url( 'logo_symbol.svg'); top: 8px; }
+.stuck .logo { background-image: url( 'logo_symbol.svg'); top: 8px; }
 .stuck + .nav-on-top { top: 66px; }
 
 
@@ -2941,8 +2968,8 @@ section:not(.shopify-section) {
 	margin: 1.5em 0 10px 0;
 	font-size: 1.6rem;
 	background: url(cart.svg) no-repeat 0 0px;
-	padding-left: 30px;
-	padding-bottom:14px;
+	padding-left: 17px;
+	padding-bottom: 5px;
 	border-bottom: 0px solid transparent;
 }
 
@@ -4087,7 +4114,7 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 	position: fixed;
 	left: 0;
 	transform: translateY(-250px);
-	padding: 10px 0;
+	padding: 20px 0;
 	width: 100%;
 	border-bottom: 1px solid #979797;
 	z-index: 3;
@@ -4102,17 +4129,8 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 		justify-content: flex-end;
 		align-items: center;
 	}
-	.sticky-add-to-cart .price-item.price-item--sale.price-item--last, .sticky-add-to-cart  .price-item.price-item--regular.pt-price.etica, .sticky-add-to-cart  .product__info-container .price--on-sale .price-item--regular, .sticky-add-to-cart .price--on-sale .price-item--regular {
-		font-size: 18px !important;
-	}
 	
-	.stickyBG-visible { transform: translateY(-160px); transition: transform .25s; 
-		top: 225px;
-	}
-
-	span.bcpo-value {
-		display: none;
-	}
+	.stickyBG-visible { transform: translateY(-160px); transition: transform .25s; }
 
 .sac-product {
 	font-weight: 700;
@@ -5970,13 +5988,8 @@ span[data-ml]::before {
  }
 
 #bcpo {
-	display: inline-block;
-    text-align: center;
-    margin: 0 auto;
-}
-
-#bcpo .bcpo-title {
-	font-weight: normal;
+	display: flex;
+	flex-wrap: wrap;
 }
 #bcpo .bcpo-dropdown {
 	order: 2;
@@ -5998,7 +6011,7 @@ span[data-ml]::before {
 }
 #bcpo .bcpo-images {
 	text-align: center;
-	margin: 10px auto 0;
+	margin: 0 auto;
 }
 #bcpo .bcpo-images .bcpo-label {
 	font-size: 1.4rem;
