--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -128,7 +128,16 @@ and (min-width: 750px) { .section-header { margin-bottom:
 <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'cart-notification.js' | asset_url }}" defer="defer"></script>
 
-
+<!-- Google Tag Manager (noscript) -->
+<noscript
+  ><iframe
+    src="https://www.googletagmanager.com/ns.html?id=GTM-W5T77Q7"
+    height="0"
+    width="0"
+    style="display: none; visibility: hidden"
+  ></iframe
+></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="overlay hideMe"></div>
 <div class="util-nav">
   <a href="/" class="logo nav-mobile"></a>
@@ -247,7 +256,7 @@ and (min-width: 750px) { .section-header { margin-bottom:
     <a href="javascript:void(0)" class="nav-right">
       <a
         href="{{ routes.cart_url }}"
-        class="header__icon header__icon--cart link focus-inset nav-cart"
+        class="header__icon header__icon--cart link focus-inset nav-cart aa"
         id="cart-icon-bubble"
       >
         {%- liquid if cart == empty 
@@ -258,13 +267,14 @@ and (min-width: 750px) { .section-header { margin-bottom:
         <span class="visually-hidden">{{ "templates.cart.cart" | t }}</span>
         {%- if cart != empty -%}
         <div class="cart-count-bubble">
-          {%- if cart.item_count < 100 -%}
-          <span aria-hidden="true">( {{ cart.item_count }} )</span>
+          ({%- if cart.item_count < 100 -%}
+          <span aria-hidden="true">{{ cart.item_count }}</span>
           {%- endif -%}
-          <span class="visually-hidden">{{
+          <span class="visually-hidden as">{{
             "sections.header.cart_count" | t: count:cart.item_count
-          }}</span>
-        </div>
+          }}</span>)
+            <span class="cart-price"> {{ cart.total_price | money }}</span>
+        </div> 
         {%- endif -%}
       </a>
       <div class="nav-full-cart hideMe"></div>
@@ -509,7 +519,7 @@ this.currentScrollTop && scrollTop > this.headerBounds.bottom) { if
 (this.preventHide) return; requestAnimationFrame(this.hide.bind(this)); } else
 if (scrollTop < this.currentScrollTop && scrollTop > this.headerBounds.bottom) {
 if (!this.preventReveal) { requestAnimationFrame(this.reveal.bind(this)); } else
-{ window.clearTimeopcut(this.isScrolling); this.isScrolling = setTimeout(() => {
+{ window.clearTimeout(this.isScrolling); this.isScrolling = setTimeout(() => {
 this.preventReveal = false; }, 66); requestAnimationFrame(this.hide.bind(this));
 } } else if (scrollTop <= this.headerBounds.top) {
 requestAnimationFrame(this.reset.bind(this)); } this.currentScrollTop =
