--- a/sections/saunas-page.liquid
+++ b/sections/saunas-page.liquid
@@ -1,4 +1,7 @@
-
+{{ 'template-collection.css' | asset_url | stylesheet_tag }}
+{{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
+{{ 'component-card.css' | asset_url | stylesheet_tag }}
+{{ 'component-price.css' | asset_url | stylesheet_tag }}	
 
 	<section>
 		<div class="centered-text ct-home topMargin">
@@ -274,53 +277,29 @@
 				</div>
 				<!--the include below is looking for rsRP -->
 				<!--#include virtual="/res/relatedProducts.asp" -->
-				<div class="product-tile" style="flex-shrink: 0;">
-						
-							<a id="rpfaraday-infrared-sauna" href="/products/faraday-infrared-sauna" data-url="/products/faraday-infrared-sauna"><img src="{{ 'faraday-infrared-sauna-natural-tile.jpg' | asset_url }}" alt="Faraday Infrared Sauna" class="pt-img img1" /></a>
-								<a href="/products/faraday-infrared-sauna" class="pt-name">Faraday Infrared Sauna</a>
-								<div class="color-choices">
-								
-									<div class="ccrp p1 c1 color-choice-on" data-productID="1" data-productCode="faraday-infrared-sauna" data-colorPrice="$5,499.99" data-colorCode="natural"><div class="color-choice" style="background-image:url({{ 'natural.jpg' | asset_url }})"></div></div>
-								
-									<div class="ccrp p1 c2 color-choice-off" data-productID="1" data-productCode="faraday-infrared-sauna" data-colorPrice="$5,699.99" data-colorCode="indigo"><div class="color-choice" style="background-image:url({{ 'indigo.jpg' | asset_url }})"></div></div>
-								
-									<div class="ccrp p1 c3 color-choice-off" data-productID="1" data-productCode="faraday-infrared-sauna" data-colorPrice="$5,699.99" data-colorCode="dark-chocolate"><div class="color-choice" style="background-image:url({{ 'dark-chocolate.jpg' | asset_url }})"></div></div>
-								
-									<div class="ccrp p1 c4 color-choice-off" data-productID="1" data-productCode="faraday-infrared-sauna" data-colorPrice="$5,699.99" data-colorCode="stone"><div class="color-choice" style="background-image:url({{ 'stone.jpg' | asset_url }}stone.jpg)"></div></div>
-								
-									<div class="ccrp p1 c5 color-choice-off" data-productID="1" data-productCode="faraday-infrared-sauna" data-colorPrice="$5,999.99" data-colorCode="turmeric"><div class="color-choice" style="background-image:url({{ 'turmeric.jpg' | asset_url }})"></div></div>
-								
-								</div><!--color-choices-->
-						
-							<p class="pt-price etica price1">$5,499.99</p>
-						
-					</div>
-	
-		
-
-					<div class="product-tile" style="flex-shrink: 0;">
-						
-							<a id="rpluminati-infrared-sauna" href="/products/luminati-infrared-sauna" data-url="/products/luminati-infrared-sauna"><img src="{{ 'luminati-infrared-sauna-natural-tile.jpg' | asset_url }}" alt="Luminati Infrared Sauna" class="pt-img img2" /></a>
-								<a href="/products/luminati-infrared-sauna" class="pt-name">Luminati Infrared Sauna</a>
-								<div class="color-choices">
-								
-									<div class="ccrp p2 c6 color-choice-on" data-productID="2" data-productCode="luminati-infrared-sauna" data-colorPrice="$2,999.99" data-colorCode="natural"><div class="color-choice" style="background-image:url({{ 'natural.jpg' | asset_url }})"></div></div>
-								
-									<div class="ccrp p2 c7 color-choice-off" data-productID="2" data-productCode="luminati-infrared-sauna" data-colorPrice="$3,199.99" data-colorCode="indigo"><div class="color-choice" style="background-image:url({{ 'indigo.jpg' | asset_url }})"></div></div>
-								
-									<div class="ccrp p2 c8 color-choice-off" data-productID="2" data-productCode="luminati-infrared-sauna" data-colorPrice="$3,199.99" data-colorCode="dark-chocolate"><div class="color-choice" style="background-image:url({{ 'dark-chocolate.jpg' | asset_url }})"></div></div>
-								
-									<div class="ccrp p2 c9 color-choice-off" data-productID="2" data-productCode="luminati-infrared-sauna" data-colorPrice="$3,199.99" data-colorCode="stone"><div class="color-choice" style="background-image:url({{ 'stone.jpg' | asset_url }})"></div></div>
-								
-									<div class="ccrp p2 c10 color-choice-off" data-productID="2" data-productCode="luminati-infrared-sauna" data-colorPrice="$3,499.99" data-colorCode="turmeric"><div class="color-choice" style="background-image:url({{ 'turmeric.jpg' | asset_url }})"></div></div>
-								
-								</div><!--color-choices-->
-						
-							<p class="pt-price etica price2">$2,999.99</p>
-						
-					</div>
-				
-
+				<ul id="product-grid" data-id="{{ section.id }}" class="
+				grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
+				{% if section.settings.columns_desktop == 1 %} grid--full-width{% else %}
+				  grid--{{ section.settings.columns_desktop }}-col-desktop
+				{% endif %}">
+				{% for product in collections.saunas.products %}
+				  {% assign lazy_load = false %}
+				  {%- if forloop.index > 2 -%}
+					{%- assign lazy_load = true -%}
+				  {%- endif -%}
+			  
+				  <li class="grid__item">
+					{% render 'card-product',
+					  card_product: product,
+					  media_aspect_ratio: section.settings.image_ratio,
+					  show_secondary_image: section.settings.show_secondary_image,
+					  show_vendor: section.settings.show_vendor,
+					  show_rating: section.settings.show_rating,
+					  lazy_load: lazy_load
+					%}
+				  </li>
+				{%- endfor -%}
+			  </ul>
 		</div>
 </section>		
 			
