--- a/assets/base.css
+++ b/assets/base.css
@@ -2923,7 +2923,7 @@ section:not(.shopify-section) {
 	transition: top .25s;
 }
 
-.stuck .logo { background-image: url( 'logo_symbol.svg'); top: 8px; }
+.stuck .logo, .sticky .logo { background-image: url( 'logo_symbol.svg'); top: 8px; }
 .stuck + .nav-on-top { top: 66px; }
 
 
@@ -4126,6 +4126,10 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 		display: flex;
 		justify-content: flex-end;
 		align-items: center;
+	}
+
+	.sticky-add-to-cart .price--on-sale .price-item--regular, .sticky-add-to-cart .price-item.price-item--sale.price-item--last {
+		font-size: 16px !important;
 	}
 	
 	.stickyBG-visible { transform: translateY(-160px); transition: transform .25s; }
@@ -5984,10 +5988,22 @@ span[data-ml]::before {
 	 position: relative;
 	 aspect-ratio: 8.5 / 10;
  }
-
+ form#product-form-installment {
+    min-height: auto !important;
+}
 #bcpo {
-	display: flex;
 	flex-wrap: wrap;
+	padding: 0 1em;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#bcpo .bcpo-title {
+	font-weight: normal;
+}
+.plug-0 {
+	font-weight: normal;
 }
 #bcpo .bcpo-dropdown {
 	order: 2;
